# CHI_test

./: .gitignore  .prefectignore  README.md  alembic.ini  data.db  docker-compose.yml  prefect.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 062df61aa8ef_add_forecast_table.py
data/processed/2025-09-16/: data.parquet
data/raw/2025-09-14/: response.json
data/raw/2025-09-16/: kyiv_response.json  london_response.json  new york_response.json  paris_response.json  rome_response.json  seoul_response.json  tokyo_response.json
data/reports/2025-09-16/: report.json
src/: alembic_upgrade.py  data_pipeline.py  db.py  http_client.py  main.py  pipeline.py  prefect_flow.py  settings.py  util.py
src/data/: city.py  forecast.py  pipeline.py
