[project]
name = "chi-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastparquet>=2024.11.0",
    "hishel>=0.1.3",
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "prefect>=2.16.0",
    "psycopg>=3.2.10",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.43",
]
